Deployment-->fixed table alignment issue

--- a/src/app/sign-up/admin/sidebar/sidebar.component.scss
+++ b/src/app/sign-up/admin/sidebar/sidebar.component.scss
@@ -1,5 +1,5 @@
 .sidebar {
-    width: 230px;
+    width: 210px;
     background-color: #ffffff;
     height: 100vh;   
     
@@ -32,7 +32,7 @@
 }
 
 .lc-title:hover{
-  background-color: #000;
+  background-color: #000 !important;
   color: white !important;
 }
 
